--- a/facapedidos/application/modules/portal/views/scripts/index/index.phtml
+++ b/facapedidos/application/modules/portal/views/scripts/index/index.phtml
@@ -58,61 +58,50 @@
         </form>
     </div>
 
+
+    <div style="float:right;margin-right: 90px;">
+
+
+	<table id="tableListaPedido" >
+	    <tr>
+		  <form action="/portal/index/limpar-Carrinho" method="post" class="" >
+	
+		<td align="center" colspan="5"><input type="submit" value="Limpar Carrinho"> <!--onclick="javascript:limparCarrinhoAjax()"--> </td>
+		</form>
+	    </tr>
+	    <tr>
+		<td align="center" colspan="5"><h4> Seu pedido </h4></td>
+	    </tr>
+	    <tr style="font-family: verdana; font-size: 11px;">
+		<th> Empresa </th> <th> Produto </th> <th> Tamanho </th> <th> Preço </th> <th>Qt</th>
+	    </tr>
+
+	</table>
+
+  </div>
+
+
+
 </div>
 
 
 
 <?php
 		for ($i = 0; $i < sizeof($this->resultado); $i++)
-		//foreach ((array) $this->resultado as $hit)
 		{
-		    //$hit = $this->resultado->fetch(PDO::FETCH_ASSOC);
-
-
 		    echo "<div style=' clear:both; margin: 80px; color:black;' > \n";
-		    echo "<div style='float: left; margin: 20px 1px 20px 21px; width:200px;'><p><img src='/portal/index/get-Imagem-Produto/id/" . $this->resultado[$i]['cod_foto'] . "' width='141' height='auto' alt=''> </p> </div> \n";
+
+		    echo "<div style='float: left; margin: 20px 1px 20px 21px; width:200px;'><p><img src='/portal/loja/get-Logo-Empresa/id/" . $this->resultado[$i]['cod_empresa'] . "' width='141' height='auto' alt=''> </p> </div> \n";
 		    echo "<div style='float: left; margin: 50px 1px 20px 21px; width:100px; font-size: large;'> <p style='display: block' > \n";
-		    echo $this->resultado[$i]["nome"];
-		    echo "</p> </div> <!-- nome do produto --> \n";
-		    echo "<div style='float: left; margin: 60px 1px 20px 80px; width:150px; font-size: medium;'> \n";
 		    echo $this->resultado[$i]["nome_empresa"];
 		    echo "</div> <!-- nome da empresa --> \n";
-		    //imprime os tamanhos disponiveis e precos do produto
-		    echo "<div style='float: left; margin: 60px 1px 20px 80px; width:200px; font-size: medium;'> \n";
-		    if (!empty($this->resultado[$i]['preco_promocional']))
-		    {
-			echo ($this->resultado[$i]['tamanho']."=> De ");
-			echo $this->resultado[$i]["preco"];
-			echo (" por ");
-			echo $this->resultado[$i]["preco_promocional"];
-		    }
-		    else
-			echo $this->resultado[$i]['tamanho'] . " => " . $this->resultado[$i]["preco"];
 
-		    $i++;
-		    while ($this->resultado[$i]['cod_produto'] == $this->resultado[$i - 1]['cod_produto'])
-		    {
-			echo "<br> \n";
-
-			if (!empty($this->resultado[$i]['preco_promocional']))
-			{
-			    echo ($this->resultado[$i]['tamanho']."=> De ");
-			    echo $this->resultado[$i]["preco"];
-			    echo (" por ");
-			    echo $this->resultado[$i]["preco_promocional"];
-			}
-			else
-			    echo $this->resultado[$i]['tamanho'] . " => " . $this->resultado[$i]["preco"];
-			$i++;
-		    }
-		    $i--;
-		    echo "</div> <!-- precos -->";
 
 		    //verifica se a empresa esta atendendo nesse horario
 		    if ($this->resultado[$i]['isAberto'] == true)
 		    {
 			echo "<div style='float: left; margin: 60px 1px 20px 21px; width:150px;'> \n";
-			echo "<a class='botao_portal_vermelho' target='' title='Ir &agrave; Loja' href='/" . $this->resultado[$i]['url'] . "?cod_produto=" . $this->resultado[$i]['cod_produto'] . "'>" .
+			echo "<a class='botao_portal_vermelho' target='' title='Ir &agrave; Loja' href='javascript:irLoja(\"" . $this->resultado[$i]['url'] . "\")'>" .
 			"<span>Ir &agrave; Loja</span></a> </div>";
 		    }
 		    else
@@ -129,3 +118,17 @@
 ?>
 
 
+<script>
+
+recebeCarrinhoJSON();
+
+function irLoja(url)
+{
+    var form = document.getElementById("form1");
+    form.action = "/"+url;
+    form.submit();
+
+}
+
+
+</script>
