--- a/facapedidos/application/modules/portal/views/scripts/index/index.phtml
+++ b/facapedidos/application/modules/portal/views/scripts/index/index.phtml
@@ -9,6 +9,14 @@
 
 </head>
 
+    <?php
+
+	if(!empty($this->nomeCliente))
+	     echo "<p>Bem vindo".  $this->nomeCliente ."! (<a href='/portal/cliente/logout'> Logout </a>) </p>";
+
+
+    ?>
+
 
 <div align="center" width="80%">
 
@@ -68,6 +76,13 @@
 	
 		<td align="center" colspan="5"><input type="submit" value="Limpar Carrinho"> <!--onclick="javascript:limparCarrinhoAjax()"--> </td>
 		</form>
+
+  		  <form action="/portal/pedido/fechar-Pedido" method="post" class="" >
+
+		<td align="center" colspan="5"><input type="submit" value="Fechar Pedido">  </td>
+		</form>
+
+
 	    </tr>
 	    <tr>
 		<td align="center" colspan="5"><h4> Seu pedido </h4></td>
