--- a/facapedidos/application/modules/portal/views/scripts/pedido/index.phtml
+++ b/facapedidos/application/modules/portal/views/scripts/pedido/index.phtml
@@ -15,8 +15,14 @@
 
 <body>
 
+    <form action="/portal/pedido/continuar-Comprando" method="POST" >
+	<input type="submit" value="Continuar Comprando">
+    </form>
+
     <form action="/portal/pedido/concluir-Compra" method="POST" id="form1" onsubmit="return validateForm('form1')" >
+
     <input type="submit" value="Concluir Compra">
+    
 
     <?php
 
