--- a/facapedidos/application/modules/portal/views/scripts/pedido/concluir-compra.phtml
+++ b/facapedidos/application/modules/portal/views/scripts/pedido/concluir-compra.phtml
@@ -12,7 +12,10 @@
   <body>
     <h4><?php echo $this->headline?></h4>
 
-    
+      <form action="/portal/pedido/continuar-Comprando" method="POST" >
+	<input type="submit" value="Continuar Comprando">
+    </form>
+
       <form action="/portal/pedido/pagamento" method="POST" id="form1" onsubmit="return validateForm('form1')">
 
   <div style="border: solid gray; margin-right: 50%; clear: both;">
