--- a/facapedidos/application/modules/estabelecimento/views/scripts/ingredients/index.phtml
+++ b/facapedidos/application/modules/estabelecimento/views/scripts/ingredients/index.phtml
@@ -7,6 +7,9 @@
   </ul>
   <div id="tabs-1">
     <div class="contentForm">
+
+Nesta tela você poderá escolher ingredientes que pretende oferecer como adicionais em seus produtos
+e configurá-los de acordo com suas preferências.
     <form action="<?php echo $this->baseUrl()?>/estabelecimento/ingredients/add" method="post" class="frm" id='form1' onsubmit="return validateForm('form1');" enctype="multipart/form-data" >
       <table class="tableFrm" cellspacing="0" cellpadding="0" border="0">
         <tr>
@@ -15,7 +18,6 @@
                 <td> Ingredientes * </td>
                 <td>
                 <?php
-
 
                 if($this->action == 'edit')
                 {
@@ -135,11 +137,53 @@
       </table>
       </form>
     </div>
+
+
+          <div class="contentForm">
+		As categorias permitem organizar grupos de ingredientes que serão oferecidos como adicionais em seus produtos.
+Ainda não tem a categoria que precisa? Cadastre uma agora.
+      <form action="/estabelecimento/ingredients/add" method="post" class="frm" id='form3' onsubmit="return validateForm('form3');" >
+      <fieldset style=" margin: 0; padding: 0;">
+	       <legend>Cadastrar categoria:</legend>
+        <table class="tableFrm" cellspacing="8" cellpadding="0" border="0">
+           <tr>
+                <td> Nome </td>
+
+      <td colspan="">
+	  <input type="text" name="categoria[nome]" class="RQR required">
+              <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
+      </td>
+
+      <td>
+         <input type="submit" name="Save" value="Salvar">
+      </td>
+
+	   </tr>
+
+        </table>
+      </fieldset>
+      <table class="tableFrm" cellspacing="5" cellpadding="0" border="0">
+        <tr>
+          <td><input type="hidden" name="emorFrom" value="3">
+	  <input type="hidden" name="ingredienteId" value="<?php echo $this->ingredienteId; ?>">
+           <input type="hidden" name="categoria[cod_empresa]" value="<?php echo $this->empresaId?>">
+            <input type="hidden" name="cod_empresa" value="<?php echo $this->empresaId?>">
+
+            </td>
+        </tr>
+      </table>
+      </form>
+    </div>
+
+
+
+
   </div>
 
 
   <div id="tabs-2">
     <div class="contentForm">
+
       <form action="<?php echo $this->baseUrl()?>/estabelecimento/ingredients/add" method="post" class="frm" id='form2' onsubmit="return validateForm('form2');" >
       <fieldset style=" margin: 0; padding: 0;">
         <legend>Associar uma categoria aos ingredientes:</legend>
@@ -172,6 +216,46 @@ echo $this->formSelect('cod_categoria_empresa', $this->formData['cod_categoria_e
       </table>
       </form>
     </div>
+
+
+      <div class="contentForm">
+		As categorias permitem organizar grupos de ingredientes que serão oferecidos como adicionais em seus produtos.
+Ainda não tem a categoria que precisa? Cadastre uma agora.
+      <form action="/estabelecimento/ingredients/add" method="post" class="frm" id='form4' onsubmit="return validateForm('form4');" >
+      <fieldset style=" margin: 0; padding: 0;">
+	       <legend>Cadastrar categoria:</legend>
+        <table class="tableFrm" cellspacing="8" cellpadding="0" border="0">
+           <tr>
+                <td> Nome </td>
+
+      <td colspan="">
+	  <input type="text" name="categoria[nome]" class="RQR required">
+              <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
+      </td>
+           
+      <td>
+         <input type="submit" name="Save" value="Salvar">
+      </td>
+
+	   </tr>
+
+        </table>
+      </fieldset>
+      <table class="tableFrm" cellspacing="5" cellpadding="0" border="0">
+        <tr>
+          <td><input type="hidden" name="emorFrom" value="4">
+	  <input type="hidden" name="ingredienteId" value="<?php echo $this->ingredienteId; ?>">
+           <input type="hidden" name="categoria[cod_empresa]" value="<?php echo $this->empresaId?>">
+            <input type="hidden" name="cod_empresa" value="<?php echo $this->empresaId?>">
+
+            </td>
+        </tr>
+      </table>
+      </form>
+    </div>
+     
+
+
   </div>
 
     </div>
